# poly_sniper

./: .gitignore  Cargo.toml  LICENSE  README.md
.claude-workspace/: .gitignore  README.md
.claude-workspace/scripts/: status-check.sh  validate-dependencies.sh  worktree-setup.sh
.claude-workspace/worktrees/adaptive-order-sizing/: STATUS.yml  TASK.md
.claude-workspace/worktrees/arbitrage-strategy/: STATUS.yml  TASK.md
.claude-workspace/worktrees/batch-signal-processing/: STATUS.yml  TASK.md
.claude-workspace/worktrees/cancel-replace-logic/: STATUS.yml  TASK.md
.claude-workspace/worktrees/config-watcher/: STATUS.yml  TASK.md
.claude-workspace/worktrees/connection-warmup/: STATUS.yml  TASK.md
.claude-workspace/worktrees/correlation-limits/: STATUS.yml  TASK.md
.claude-workspace/worktrees/correlation-regime-detection/: STATUS.yml  TASK.md
.claude-workspace/worktrees/cross-asset-signals/: STATUS.yml  TASK.md
.claude-workspace/worktrees/discord-config-integration/: STATUS.yml  TASK.md
.claude-workspace/worktrees/discord-embed-builder/: STATUS.yml  TASK.md
.claude-workspace/worktrees/discord-notifier-service/: STATUS.yml  TASK.md
.claude-workspace/worktrees/discord-webhook-core/: STATUS.yml  TASK.md
.claude-workspace/worktrees/drawdown-scaling/: STATUS.yml  TASK.md
.claude-workspace/worktrees/emergency-kill-switch/: STATUS.yml  TASK.md
.claude-workspace/worktrees/enhanced-fill-probability/: STATUS.yml  TASK.md
.claude-workspace/worktrees/ensemble-predictions/: STATUS.yml  TASK.md
.claude-workspace/worktrees/feature-store/: STATUS.yml  TASK.md
.claude-workspace/worktrees/gas-fee-tracker/: STATUS.yml  TASK.md
.claude-workspace/worktrees/gas-optimization-engine/: STATUS.yml  TASK.md
.claude-workspace/worktrees/health-server/: STATUS.yml  TASK.md
.claude-workspace/worktrees/historical-backtesting/: STATUS.yml  TASK.md
.claude-workspace/worktrees/hot-reload-integration/: STATUS.yml  TASK.md
.claude-workspace/worktrees/implementation-shortfall/: STATUS.yml  TASK.md
config/: default.toml  feature_store.toml  online_learning.toml  rl_execution.toml
config/strategies/: arbitrage.toml  cross_asset.toml  ensemble.toml  event_based.toml  liquidity_provision.toml  llm_prediction.toml  microstructure.toml  multi_leg.toml  new_market.toml  news_velocity.toml  orderbook_imbalance.toml  polymarket_activity.toml  prediction_arbitrage.toml  price_spike.toml  resolution_exit.toml  sentiment.toml  target_price.toml  vpin.toml  whale_detector.toml  whale_tracking.toml
crates/polysniper-backtest/: Cargo.toml
crates/polysniper-backtest/src/: config.rs  data_loader.rs  engine.rs  error.rs  lib.rs  results.rs
crates/polysniper-core/: Cargo.toml
crates/polysniper-core/benches/: orderbook_bench.rs
crates/polysniper-core/src/: batch_processor.rs  config_watcher.rs  ensemble_types.rs  error.rs  events.rs  gas.rs  lib.rs  microstructure_publisher.rs  ml_types.rs  orderbook.rs  resolution.rs  sentiment.rs  traits.rs  types.rs
crates/polysniper-data/: Cargo.toml
crates/polysniper-data/benches/: event_bus_bench.rs
crates/polysniper-data/src/: connection_health.rs  connection_pool.rs  crypto_price_client.rs  event_bus.rs  event_bus_fast.rs  feed_aggregator.rs  feed_types.rs  gamma_client.rs  http_pool.rs  lib.rs  market_cache.rs  news_velocity.rs  openrouter_client.rs  polymarket_activity.rs  prediction_aggregator.rs  resolution_monitor.rs  rss_client.rs  twitter_client.rs  webhook_server.rs  ws_manager.rs
crates/polysniper-data/src/external_markets/: kalshi.rs  metaculus.rs  mod.rs  predictit.rs
crates/polysniper-data/src/providers/: mod.rs  openrouter.rs
crates/polysniper-discord/: Cargo.toml
crates/polysniper-discord/src/: client.rs  embed.rs  error.rs  lib.rs  notifier.rs  templates.rs  types.rs
crates/polysniper-execution/: Cargo.toml
crates/polysniper-execution/src/: depth_analyzer.rs  fast_submitter.rs  fill_manager.rs  fill_poller.rs  gas_optimizer.rs  gas_tracker.rs  lib.rs  market_impact.rs  order_builder.rs  order_manager.rs  participation_adapter.rs  price_level_analyzer.rs  queue_estimator.rs  rl_executor.rs  shortfall_tracker.rs  submitter.rs  volume_monitor.rs
crates/polysniper-execution/src/algorithms/: mod.rs  twap.rs  vwap.rs
crates/polysniper-ml/: Cargo.toml
crates/polysniper-ml/src/: feature_store.rs  lib.rs
crates/polysniper-ml/src/features/: market.rs  mod.rs  orderbook.rs  price_history.rs  sentiment.rs  temporal.rs
crates/polysniper-ml/src/rl/: mod.rs  q_learning.rs  replay_buffer.rs  reward.rs  state.rs
crates/polysniper-observability/: Cargo.toml
crates/polysniper-observability/src/: alerting.rs  health.rs  latency_metrics.rs  lib.rs  logging.rs  metrics.rs
crates/polysniper-persistence/: Cargo.toml
crates/polysniper-persistence/src/: database.rs  error.rs  lib.rs  models.rs  pnl_calculator.rs
crates/polysniper-persistence/src/repositories/: alerts.rs  daily_pnl.rs  mod.rs  model_learning.rs  orders.rs  performance_metrics.rs  position_history.rs  price_snapshots.rs  strategy_metrics.rs  strategy_state.rs  trades.rs
crates/polysniper-risk/: Cargo.toml
crates/polysniper-risk/src/: control.rs  correlation.rs  correlation_regime.rs  drawdown.rs  kelly.rs  lib.rs  time_rules.rs  validator.rs  var.rs  volatility.rs
crates/polysniper-strategies/: Cargo.toml
crates/polysniper-strategies/src/: arbitrage.rs  calibration.rs  cross_asset.rs  ensemble.rs  event_based.rs  lib.rs  liquidity_provision.rs  llm_prediction.rs  microstructure_strategy.rs  ml_processor.rs  multi_leg.rs  new_market.rs  news_velocity.rs  online_learning.rs  orderbook_imbalance.rs  polymarket_activity.rs  prediction_arbitrage.rs  price_spike.rs  resolution_exit.rs  sentiment_analyzer.rs  sentiment_strategy.rs  target_price.rs  thompson_sampling.rs  vpin.rs  whale_detector.rs  whale_strategy.rs
crates/polysniper-tui/: Cargo.toml
crates/polysniper-tui/src/: app.rs  event.rs  lib.rs  ui.rs
crates/polysniper-tui/src/widgets/: mod.rs  orderbook.rs  price.rs  trades.rs
src/: backtest.rs  main.rs
src/commands/: mod.rs  stats.rs
(+76 files in other folders)
