[workspace]
resolver = "2"
members = [
    "crates/polysniper-core",
    "crates/polysniper-data",
    "crates/polysniper-discord",
    "crates/polysniper-strategies",
    "crates/polysniper-execution",
    "crates/polysniper-risk",
    "crates/polysniper-observability",
    "crates/polysniper-persistence",
    "crates/polysniper-tui",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Polysniper Contributors"]
license = "Apache-2.0"
repository = "https://github.com/jacklau/Polysniper"

[workspace.dependencies]
# Polymarket SDK
polymarket-client-sdk = { version = "0.3", features = ["clob", "ws", "gamma", "data"] }

# Async runtime
tokio = { version = "1.44", features = ["full"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
futures = "0.3"
async-trait = "0.1"

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Numeric types
rust_decimal = { version = "1.36", features = ["serde"] }
rust_decimal_macros = "1.36"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging/Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Database
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }

# Web server (for webhooks)
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }

# Crypto/Signing
alloy = { version = "1.0", features = ["signer-local"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Config
config = "0.14"

# Testing
criterion = "0.5"

# Metrics
prometheus = "0.13"
lazy_static = "1.4"

# HTTP client for alerting
ureq = { version = "2.9", features = ["json"] }

# UUID generation
uuid = { version = "1.8", features = ["v4"] }

# CLI
clap = { version = "4.5", features = ["derive"] }
comfy-table = "7.1"
csv = "1.3"

[package]
name = "polysniper"
version.workspace = true
edition.workspace = true

[dependencies]
polysniper-core = { path = "crates/polysniper-core" }
polysniper-data = { path = "crates/polysniper-data" }
polysniper-discord = { path = "crates/polysniper-discord" }
polysniper-strategies = { path = "crates/polysniper-strategies" }
polysniper-execution = { path = "crates/polysniper-execution" }
polysniper-risk = { path = "crates/polysniper-risk" }
polysniper-observability = { path = "crates/polysniper-observability" }
polysniper-persistence = { path = "crates/polysniper-persistence" }
polysniper-tui = { path = "crates/polysniper-tui" }
clap = { version = "4.5", features = ["derive"] }

tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
anyhow.workspace = true
config.workspace = true
chrono.workspace = true
rust_decimal.workspace = true
uuid.workspace = true
clap.workspace = true
comfy-table.workspace = true
csv.workspace = true
