[package]
name = "polysniper-core"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
rust_decimal.workspace = true
thiserror.workspace = true
chrono.workspace = true
tracing.workspace = true
notify = { version = "6.1", default-features = false, features = ["macos_kqueue"] }

[dev-dependencies]
rust_decimal_macros.workspace = true
tempfile = "3"
tempfile = "3.12"
