[package]
name = "polysniper-data"
version.workspace = true
edition.workspace = true

[dependencies]
polysniper-core = { path = "../polysniper-core" }

tokio.workspace = true
tokio-tungstenite.workspace = true
futures.workspace = true
async-trait.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
rust_decimal.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
chrono.workspace = true
urlencoding = "2.1"

# Feed ingestion dependencies
feed-rs = "2.0"
sha2 = "0.10"

# Webhook server dependencies
axum.workspace = true
uuid.workspace = true

# Lock-free event bus
crossbeam-channel.workspace = true
parking_lot.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "event_bus_bench"
harness = false
