[package]
name = "polysniper-ml"
version.workspace = true
edition.workspace = true

[dependencies]
polysniper-core = { path = "../polysniper-core" }

tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
rust_decimal.workspace = true
rust_decimal_macros.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
chrono.workspace = true
rand.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
