[package]
name = "polysniper-observability"
version.workspace = true
edition.workspace = true

[dependencies]
polysniper-core = { path = "../polysniper-core" }

tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
rust_decimal.workspace = true
axum.workspace = true
prometheus.workspace = true
lazy_static.workspace = true
ureq.workspace = true
thiserror.workspace = true
