[package]
name = "polysniper-strategies"
version.workspace = true
edition.workspace = true

[dependencies]
polysniper-core = { path = "../polysniper-core" }
polysniper-data = { path = "../polysniper-data" }

tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
rust_decimal.workspace = true
rust_decimal_macros.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
chrono.workspace = true
lru = "0.12"
